Fixing Spacing

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
   text-align: center;
 }
 
-.Design{
+.Bottom{
   background-color: rgb(188, 211, 230);
 
 }
